# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  29 Mar 2005; Mike Frysinger <vapier@gentoo.org>:

    Move /etc/bash/bashrc to /etc/bashrc.

  23 Mar 2005; Roy Marples <uberlord@gentoo.ord>:

    bridge stops removing IP addresses from bridge ports.
    iwconfig no longer tries to get an ESSID from non-wireless interfaces.
    ifconfig no longer errors when deleting addresses on a non-existant
    interface.

  23 Mar 2005; Martin Schlemmer <azarah@gentoo.org>:

    Get modules-update to clean up after itself if we on a 2.6 kernel without
    modules.conf.

  22 Mar 2005; Roy Marples <uberlord@gentoo.org>:

    revamped rc-services.sh for STYLE updates and code rationalisation.

  21 Mar 2005; Roy Marples <uberlord@gentoo.org>:
  
    udhcpc now checks for custom hostname correctly

  21 Mar 2005; Martin Schlemmer <azarah@gentoo.org>:

    Fix tracing for current service as list_depend_trace() was removed.
    Fix mylevel not being set if valid_iuse(), etc is called from /sbin/rc.

  20 Mar 2005; Martin Schlemmer <azarah@gentoo.org>:

    Take sort_services function from bug #70009, and fix the removing of a
    service from a array properly by using unset.  Use this instead of the
    trace_* stuff, and fixup shutdown order.

  19 Mar 2005; Mike Frysinger <vapier@gentoo.org>:

    Make sure we mount svcdir with 0755 and not 0644 #85888.

  15 Mar 2005; Martin Schlemmer <azarah@gentoo.org>:

    Export myservice when starting critical services, as its needed by
    some of the addons (dmcrypt for example).

  12 Mar 2005; Mike Frysinger <vapier@gentoo.org>:

    When shutting down, pass -h to halt too #84654 by Dmitry Karasik.

  11 Mar 2005; Roy Marples <uberlord@gentoo.org>:

    Prepend rc-daemon.sh functions with rc_ to avoid name conflicts

  11 Mar 2005; Martin Schlemmer <azarah@gentoo.org>:

    Make sure the last test in init.d/modules do not bork the return