@@ -887,16 +887,3 @@ iwconfig_pre_start() {
 	interface_down ${iface}
 	return 1
 }
-
-# bool iwconfig_pre_stop(char *iface)
-#
-# Configures ESSID variable
-# Always returns 0
-iwconfig_pre_stop() {
-	unset ESSID ESSIDVAR
-	if iwconfig_check_extensions $1 ; then
-		ESSID=$( iwconfig_get_essid $1 )
-		ESSIDVAR=${ESSID//[![:word:]]/_}
-	fi
-	return 0
-}
